index.html changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <p class="user-message">
                         Bem-Vindo, Usuário :)
                     </p>
-                    <span class="balance"></span>
+                    <span class="balance">Saldo: ---</span>
                 </div>
                 <form class="form">
                     <div class="inputs">
