--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
         <header class="header">
             <h1 class="title">Wallet.js</h1>
         </header>
+        <div class="background-opacity"></div>
+        <div class="prompt">
+            <section class="update-section">
+                <span><img src="./assets/x-lg.svg" alt=""></span>
+                <h2 style="text-align: center;">Atualizar Dados</h2>
+                <div class="input-div">
+                    <label for="newDescription" class="label">Nova Descrição:</label>
+                    <input type="text" name="newDescription" id="newDescription" class="input" autocomplete="off">
+                </div>
+                <div class="input-div">
+                    <label for="newValue" class="label">Novo Valor:</label>
+                    <input type="text" name="newValue" id="newValue" class="input" autocomplete="off">
+                </div>
+            </section>
+        </div>
         <main class="main-content">
             <section class="first-section">
                 <div class="user-info">
@@ -27,8 +42,7 @@
                     <div class="inputs">
                         <div class="input-div">
                             <label for="description" class="label">Descrição:</label>
-                            <input type="text" name="description" id="description" class="input"
-                                autocomplete="off">
+                            <input type="text" name="description" id="description" class="input" autocomplete="off">
                         </div>
                         <div class="input-div">
                             <label for="value" class="label">Valor:</label>
